refactoring and utils class